[package]
name = "lazycell"
version = "0.0.1"
authors = ["Alex Crichton <alex@alexcrichton.com>",
           "Nikita Pekin <contact@nikitapek.in>"]
description = "A library providing a lazily filled Cell struct"
repository = "https://github.com/indiv0/lazycell"
keywords = ["lazycell", "lazy", "cell", "library"]
license = "MIT/Apache-2.0"

[dependencies]
clippy = { version = "0.0", optional = true }

[features]
nightly = []
nightly-testing = ["clippy", "nightly"]
